--- a/_includes/origami-theme/header.html
+++ b/_includes/origami-theme/header.html
@@ -1,4 +1,3 @@
-
 <header class="o-header-services" data-o-component="o-header-services">
 	<div class="o-header-services__top">
 		<div class="o-header-services__hamburger">
@@ -24,5 +23,5 @@
 			{% endif %}
 		</div>
 	</div>
-	{% include navigation.html %}
+	{% include origami-theme/navigation.html %}
 </header>
